<resources>
    <string name="app_name">Anyone VPN</string>
    <string name="app_description">Anyone VPN is a free proxy app that empowers other apps to use the internet more securely. Anyone VPN uses Anon to encrypt your Internet traffic and then hides it by bouncing through a series of computers around the world. Anon is free software and an open network that helps you defend against a form of network surveillance that threatens personal freedom and privacy, confidential business activities and relationships, and state security known as traffic analysis.</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_log">Log</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_about">About</string>
    <string name="main_layout_download">Download</string>
    <string name="main_layout_upload">Upload</string>
    <string name="button_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="wizard_details_msg">Anyone VPN is an open-source application that contains Anon, Go-Tun2Socks and LibEvent. It provides a VPN tunnel, a local HTTP Connect proxy (HTTPS only on port 8118) and a SOCKS proxy (9050) into the Anon network.</string>
    <string name="pref_general_group">General</string>
    <string name="pref_start_boot_title">Start Anyone VPN on Boot</string>
    <string name="pref_start_boot_summary">Automatically start Anyone VPN and connect Anon when your Android device boots</string>
    <string name="pref_node_configuration">Node Configuration</string>
    <string name="pref_node_configuration_summary">These are advanced settings that can reduce your anonymity</string>
    <string name="pref_entrance_node">Entrance Nodes</string>
    <string name="pref_entrance_node_summary">Fingerprints, nicks, countries and addresses for the first hop</string>
    <string name="pref_entrance_node_dialog">Enter Entrance Nodes</string>
    <string name="pref_allow_background_starts_title">Allow Background Starts</string>
    <string name="pref_allow_background_starts_summary">Let any app tell Anyone VPN to start Anon and related services</string>
    <string name="pref_proxy_title">Outbound Network Proxy (Optional)</string>
    <string name="pref_proxy_type_title">Outbound Proxy Type</string>
    <string name="pref_proxy_type_summary">Protocol to use for proxy server: HTTP, HTTPS, SOCKS4, SOCKS5</string>
    <string name="pref_proxy_type_dialog">Enter Proxy Type</string>
    <string name="pref_proxy_host_title">Outbound Proxy Host</string>
    <string name="pref_proxy_host_summary">Proxy Server hostname</string>
    <string name="pref_proxy_host_dialog">Enter Proxy Host</string>
    <string name="pref_proxy_port_title">Outbound Proxy Port</string>
    <string name="pref_proxy_port_summary">Proxy Server port</string>
    <string name="pref_proxy_port_dialog">Enter Proxy port</string>
    <string name="pref_proxy_username_title">Outbound Proxy Username</string>
    <string name="pref_proxy_username_summary">Proxy Username (Optional)</string>
    <string name="pref_proxy_username_dialog">Enter Proxy Username</string>
    <string name="pref_proxy_password_title">Outbound Proxy Password</string>
    <string name="pref_proxy_password_summary">Proxy Password (Optional)</string>
    <string name="pref_proxy_password_dialog">Enter Proxy Password</string>
    <string name="error">Error</string>
    <string name="exit_nodes">Exit Nodes</string>
    <string name="fingerprints_nicks_countries_and_addresses_for_the_last_hop">Fingerprints, nicks, countries and addresses for the last hop</string>
    <string name="enter_exit_nodes">Enter Exit Nodes</string>
    <string name="exclude_nodes">Exclude Nodes</string>
    <string name="fingerprints_nicks_countries_and_addresses_to_exclude">Fingerprints, nicks, countries and addresses to exclude</string>
    <string name="enter_exclude_nodes">Enter Exclude Nodes</string>
    <string name="strict_nodes">Strict Nodes</string>
    <string name="strict_nodes_description">Treat Exclude Nodes settings as a requirement for building all circuits. This may break functionality if no circuits are able to be generated with your Exclude Nodes settings.</string>
    <string name="relays">Relays</string>
    <string name="relaying">Relaying</string>
    <string name="enable_your_device_to_be_a_non_exit_relay">Enable your device to be a non-exit relay</string>
    <string name="relay_port">Relay Port</string>
    <string name="listening_port_for_your_anon_relay">Listening port for your Anon relay</string>
    <string name="enter_or_port">Enter OR port</string>
    <string name="relay_nickname">Relay nickname</string>
    <string name="the_nickname_for_your_anon_relay">The nickname for your Anon relay</string>
    <string name="enter_a_custom_relay_nickname">Enter a custom relay nickname</string>
    <string name="reachable_addresses">Reachable Addresses</string>
    <string name="run_as_a_client_behind_a_firewall_with_restrictive_policies">Run as a client behind a firewall with restrictive policies</string>
    <string name="reachable_ports">Reachable ports</string>
    <string name="ports_reachable_behind_a_restrictive_firewall">Ports reachable behind a restrictive firewall</string>
    <string name="enter_ports">Enter ports</string>
    <string name="enable_debug_log_to_output_must_use_adb_or_alogcat_to_view_">Enable debug log to output (must use adb or aLogcat to view)</string>
    <string name="project_home">Project Home:</string>
    <string name="anyonevpn_url" translatable="false">https://www.anyone.io/</string>
    <string name="anyonevpn_github" translatable="false">https://github.com/anyone-protocol/AnyoneVpn</string>
    <string name="anon_url" translatable="false">Anon: https://www.anyone.io</string>
    <string name="openssl_url" translatable="false">OpenSSL: http://www.openssl.org</string>
    <string name="third_party_software">3rd-Party-Software: </string>
    <string name="version">Version:</string>
    <string name="license">License:</string>
    <string name="hidden_service_request">An app wants to open anon server on port %1$s to the Anon network. This is safe if you trust the app.</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="pref_use_expanded_notifications">Display in the notification the country and IP Address of your Anon exit node when available</string>
    <string name="pref_use_expanded_notifications_title">Expanded Notifications</string>
    <string name="set_locale_title">Language</string>
    <string name="pref_disable_network_title">No Network Auto-Sleep</string>
    <string name="pref_disable_network_summary">Put Anon to sleep when there is no internet available</string>
    <string name="newnym">You\'ve switched to a new Anon identity!</string>
    <string name="pref_open_proxy_on_all_interfaces_title">Open Proxy on All Interfaces</string>
    <string name="pref_open_proxy_on_all_interfaces_summary">Allow Wi-Fi peers, tethered devices and anyone else who can connect to your IP, to access Anon</string>
    <string name="pref_socks_title">Anon SOCKS</string>
    <string name="pref_socks_summary">Port that Anon offers its SOCKS proxy on (default: 9050 or 0 to disable)</string>
    <string name="pref_socks_dialog">SOCKS Port Config</string>
    <string name="pref_http_title">Anon HTTP</string>
    <string name="pref_http_summary">Port that Anon offers its HTTP proxy on (default: 8118 or 0 to disable)</string>
    <string name="pref_http_dialog">HTTP Port Config</string>
    <string name="pref_transport_title">Anon TransProxy Port</string>
    <string name="pref_transport_summary">Port that Anon offers its Transparent Proxy on (default: 9040 or 0 to disable)</string>
    <string name="pref_transport_dialog">TransProxy Port Config</string>
    <string name="pref_dnsport_title">Anon DNS Port</string>
    <string name="pref_dnsport_summary">Port that Anon offers its DNS on (default: 5400 or 0 to disable)</string>
    <string name="pref_dnsport_dialog">DNS Port Config</string>
    <string name="pref_anonrc_title">Anonrc Custom Config</string>
    <string name="pref_anonrc_summary">EXPERTS ONLY: enter direct anonrc config lines</string>
    <string name="pref_anonrc_dialog">Custom Anonrc</string>
    <string name="kibibyte">KiB</string>
    <string name="mebibyte">MiB</string>
    <string name="apps_mode">VPN Mode</string>
    <string name="send_email">Send Email</string>
    <string name="vpn_default_world">Global (Auto)</string>
    <string name="hidden_services">Anon Services</string>
    <string name="v3_hosted_services">Hosted Anon Services</string>
    <string name="v3_client_auth_activity_title">Client Authorization</string>
    <string name="v3_key_hash">x25519 Private Key in Base32</string>
    <string name="v3_anon">.anon Domain</string>
    <string name="v3_backup_key">Backup Client Authorization Key</string>
    <string name="v3_backup_key_warning">Warning: This could expose your key to other apps</string>
    <string name="v3_delete_client_authorization">Delete Client Authorization Key</string>
    <string name="v3_delete_client_authorization_confirm">Delete Client Authorization</string>
    <string name="v3_backup_name_hint">Backup filename…</string>
    <string name="v3_import_auth_private">Import .auth_private</string>
    <string name="confirm">Confirm</string>
    <string name="menu_hidden_services">Anon Services</string>
    <string name="save">Save</string>
    <string name="local_port">Local Port</string>
    <string name="anon_port">Anon Port</string>
    <string name="name">Name</string>
    <string name="done">Done!</string>
    <string name="copy_address_to_clipboard">Copy address to clipboard</string>
    <string name="backup_service">Backup Service &lt;i&gt;(Warning: This Could Expose Your Service Configuration to Other Apps)&lt;/i&gt;</string>
    <string name="delete_service">Delete Service</string>
    <string name="backup_saved_at_external_storage">Backup saved at external storage</string>
    <string name="backup_restored">Backup restored</string>
    <string name="backup_port_exist">Error: An Anon service is already using port %s</string>
    <string name="restore_backup">Restore Backup</string>
    <string name="create_a_backup_first">Create a backup first</string>
    <string name="start_anon_again_for_finish_the_process">Start Anon again for finish the process</string>
    <string name="confirm_service_deletion">Confirm service deletion</string>
    <string name="service_type">Service type</string>
    <string name="please_restart_to_enable_the_changes">Please restart Anyone VPN to enable the changes</string>
    <string name="anon" translatable="false">.anon</string>
    <string name="share_as_qr">Share as QR</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="consider_disable_battery_optimizations">Hosted services running, consider disabling battery optimizations</string>
    <string name="consider_enable_battery_optimizations">No hosted services running, consider enabling battery optimizations</string>
    <string name="pref_isolate_dest">Isolate destination addresses</string>
    <string name="pref_isolate_dest_summary">Use a different circuit for each destination address</string>
    <string name="full_device_vpn">Full Device VPN</string>
    <string name="user_services">User services</string>
    <string name="app_services">App services</string>
    <string name="secure_your_connection_title">Ready to connect</string>
    <string name="connected_title">Connected</string>
    <string name="btn_change_exit">Change exit</string>
    <string name="btn_refresh">Refresh</string>
    <string name="connect">Connect</string>
    <string name="hide_apps">Hide apps from network monitoring and get access when they are blocked.</string>
    <string name="add_service">Add Service</string>
</resources>